# link-shortener

./: .gitignore  README.md  TODO.md
bun/: Readme.md  app.ts  bun.lockb  package.json  test_config.yaml
bun/templates/: all.ejs  created.ejs
django/: README.md  manage.py  test_config.yaml
django/app/: admin.py  apps.py  models.py  urls.py  views.py
django/config/: asgi.py  settings.py  urls.py  wsgi.py
django/django_link_shortener/: asgi.py  settings.py  urls.py  wsgi.py
django/urls/: apps.py
express/: README.md  app.js  package-lock.json  package.json  test_config.yaml
express/prisma/: schema.prisma
express/routes/: urls.js
express/views/: all.ejs  created.ejs  edit.ejs  new.ejs
fastapi/: README.md  database.py  main.py  pyproject.toml  test_config.yaml
fastapi/templates/: all.html  edit.html  new.html
fastify/: README.md  package-lock.json  package.json  server.js  test_config.yaml
fastify/prisma/: schema.prisma
fastify/public/: style.css
fastify/templates/: all.ejs  created.ejs  new.ejs
flask/: README.md  app.py  initdb.py  requirements.txt  schema.sql  test_config.yaml
flask/templates/: created.html
go/: README.md  go.mod  main.go  test_config.yaml
go/templates/: all.html  created.html  edit.html  new.html
node/: README.md  drizzle.config.ts  package-lock.json  package.json  schema.ts  server.js
node/templates/: all.ejs  new.ejs
sinatra/: README.md  app.rb  test_config.yaml
sinatra/views/: all.erb  (+3 more)
spring/: README.md  build.gradle  settings.gradle  test_config.yaml
tests/: conftest.py  test_shortener.py  test_utils.py
(+20 files in other folders)
