[project]
name = "link-shortener-fastapi"
version = "0.1.0"
description = "link shortener with fastapi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.5",
    "pydantic>=2.10.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.37",
]
